========================
Changes for lovely.spice
========================

2015/12/03 0.0.4
================

 - refactored renderer to support single template rendering with custom
   context

2015/11/26 0.0.3
================

 - included required versions.cfg in MANIFEST.in


2015/11/26 0.0.2
================

 - added missing MANIFEST.in


2015/11/26 0.0.1
================

 - initial release
