@@ -2,6 +2,8 @@
 Changes for lovely.spice
 ========================
 
+ - added FileRenderer to support rendering of single templates by CLI
+
 2015/12/03 0.0.4
 ================
 
